bluec-tests/tests/valid/types_short/multi/maintain_stack_alignment.c
short add_variables(short x, short y, short z) {
    return x + y + z;
}