bluec-tests/tests/invalid/typedef/cannot_combine_type_specifiers.c
typedef int AnotherInt;

int main(void) {
    typedef int MyInt;
    signed MyInt x = 0;
    MyInt unsigned y = 0;
    signed AnotherInt z = 0;
    return 0;
}
